--- a/Flixer/Base.lproj/Main.storyboard
+++ b/Flixer/Base.lproj/Main.storyboard
@@ -347,7 +347,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="PFq-eP-p6d"/>
+        <segue reference="OYE-QL-PJt"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="now_playing_tabbar_item" width="21" height="21"/>
