--- a/Flixer/Base.lproj/LaunchScreen.storyboard
+++ b/Flixer/Base.lproj/LaunchScreen.storyboard
@@ -15,19 +15,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="Dkz-0K-xMj">
-                                <rect key="frame" x="118" y="228" width="138" height="139"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="Dkz-0K-xMj">
+                                <rect key="frame" x="118.5" y="234" width="138" height="139"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="139" id="3jb-cf-8vg"/>
+                                    <constraint firstAttribute="width" constant="138" id="Rx4-fv-IAG"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="FLIXER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBa-Pa-cYG">
-                                <rect key="frame" x="139" y="395" width="94" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FLIXER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBa-Pa-cYG">
+                                <rect key="frame" x="140.5" y="393" width="94" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="IkK-n6-v8a"/>
+                                    <constraint firstAttribute="height" constant="44" id="smi-aA-bjl"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="44"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IBa-Pa-cYG" firstAttribute="top" secondItem="Dkz-0K-xMj" secondAttribute="bottom" constant="20" id="Dh6-HI-Nsw"/>
+                            <constraint firstItem="Dkz-0K-xMj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-30" id="GOH-GY-q1C"/>
+                            <constraint firstItem="IBa-Pa-cYG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bIN-X4-Luz"/>
+                            <constraint firstItem="Dkz-0K-xMj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gh2-lR-qnB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
