--- a/Flixer/Base.lproj/Main.storyboard
+++ b/Flixer/Base.lproj/Main.storyboard
@@ -323,13 +323,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="psg-qT-5er">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="psg-qT-5er">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="648"/>
                                 <subviews>
-                                    <wkWebView clipsSubviews="YES" contentMode="scaleAspectFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xN5-5L-h63">
+                                    <wkWebView clipsSubviews="YES" contentMode="scaleAspectFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xN5-5L-h63">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="648"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <wkWebViewConfiguration key="configuration">
                                             <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -342,11 +340,23 @@
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="xN5-5L-h63" firstAttribute="trailing" secondItem="RVg-gE-Rqk" secondAttribute="trailing" id="4ii-Bf-fPR"/>
+                                    <constraint firstAttribute="bottom" secondItem="xN5-5L-h63" secondAttribute="bottom" id="DbV-lh-QcK"/>
+                                    <constraint firstItem="xN5-5L-h63" firstAttribute="top" secondItem="RVg-gE-Rqk" secondAttribute="top" id="f1H-YW-rlf"/>
+                                    <constraint firstItem="xN5-5L-h63" firstAttribute="leading" secondItem="RVg-gE-Rqk" secondAttribute="leading" id="qWM-Lj-UN6"/>
+                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="geQ-cZ-34w"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="RVg-gE-Rqk"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="psg-qT-5er" firstAttribute="leading" secondItem="yix-zD-DEM" secondAttribute="leading" id="5DB-tu-s3g"/>
+                            <constraint firstAttribute="bottom" secondItem="psg-qT-5er" secondAttribute="bottom" id="FFl-Wm-rQc"/>
+                            <constraint firstItem="psg-qT-5er" firstAttribute="trailing" secondItem="yix-zD-DEM" secondAttribute="trailing" id="icS-Cz-hfs"/>
+                            <constraint firstItem="psg-qT-5er" firstAttribute="top" secondItem="yix-zD-DEM" secondAttribute="top" id="v9C-YR-ZBx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="yix-zD-DEM"/>
                     </view>
                     <navigationItem key="navigationItem" id="yNP-Ub-UeF"/>
@@ -523,7 +533,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="OYE-QL-PJt"/>
+        <segue reference="PFq-eP-p6d"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="ant" catalog="system" width="107" height="128"/>
